--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,17 @@
 ---
-const platform = "github";
-const username = "mar124029";
+import Social from "./Social.astro";
 ---
 
 <footer>
-    <p>Learn more about my projects on a <a target="_blank" href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+    <Social platform ="twitter" username="astrodotbuild"/>
+    <Social platform ="github" username="mar124029"/>
+    <Social platform ="youtube" username="astrodotbuild"/>
 </footer>
+
+<style>
+    footer{
+        display: flex;
+        gap: 1rem;
+        margin-top:2rem;
+    }
+</style>
