--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -14,7 +14,7 @@ const pageTitle = "My Astro Learning Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
@@ -25,5 +25,8 @@ const pageTitle = "My Astro Learning Blog";
       </ul>
 
       <Footer />
+      <script>
+        import "../scripts/menu";
+      </script>
   </body>
 </html>
