--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
 const pageTitle = "Home Page";
 ---
@@ -14,8 +14,12 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation/>
+		<Header />
 		<h1>{pageTitle}</h1>
 		<Footer />
+
+		<script>
+			import "../scripts/menu";
+		</script>
 	</body>
 </html>
