--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -9,5 +9,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <li><a href="/posts/post-1/">Post 1</a></li>
     <li><a href="/posts/post-2/">Post 2</a></li>
     <li><a href="/posts/post-3/">Post 3</a></li>
+    <li><a href="/posts/learning-astro/">Learning Astro</a></li>
   </ul>
 </BaseLayout>
