--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,13 @@
 ---
 const pageTitle = "My Astro Learning Blog";
 import BaseLayout from "../layouts/BaseLayout.astro";
+const allPosts = await Astro.glob('./posts/*.md')
+import BlogPost from "../components/BlogPost.astro";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li>
-    <li><a href="/posts/learning-astro/">Learning Astro</a></li>
+    {allPosts.map(posts=> <BlogPost url={posts.url} title={posts.frontmatter.title}></BlogPost>)}
   </ul>
 </BaseLayout>
