--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,7 @@ h1{
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
+    list-style: none;
   }
   
   .nav-links a:hover,
@@ -64,7 +65,7 @@ h1{
 
   @media screen and (min-width: 636px) {
     .nav-links {
-      margin-left: 5em;
+      /* margin-left: 5em; */
       display: block;
       position: static;
       width: auto;
@@ -80,7 +81,9 @@ h1{
       display: none;
     }
 
-    
+    .space{
+      scale: 1;
+    }
 }
 
 :root{
@@ -93,4 +96,16 @@ h1{
   color: var(--skillColor);
   font-weight: var(--fontWeight);
   text-transform: var(--textCase);
+}
+
+.contenedor-dop{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.space{
+  z-index: -1;
 }
